--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>Academic Project Page</title>
+  <title> StereoCrafter </title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -35,7 +35,7 @@
   <link rel="stylesheet" href="static/css/fontawesome.all.min.css">
   <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
-  <link rel="stylesheet" href="static/css/index.css">
+  <link rel="stylesheet" href="static/css/index_style3.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
@@ -51,85 +51,152 @@
 	    }
 	});
     </script>
+
+    <link rel="stylesheet" type="text/css" href="static/fullpage/fullpage.css" />
+
+    <script type="text/javascript" src="static/fullpage/fullpage.js"></script>
+
+    <style>
+      .section{
+        color:white
+      }
+      .section a{
+        color:white
+      }
+
+      #myVideo{
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        top:0;
+        width: 100%;
+        height: 100%;
+        background-size: 100% 100%;
+         background-color: black; /* in case the video doesn't fit the whole page*/
+          background-image: /* our video */;
+          background-position: center center;
+          background-size: contain;
+           object-fit: cover; /*cover video background */
+           z-index:0;
+      }
+    </style>
+
   <script src="static/js/index.js"></script>
 </head>
 <body>
 
 
-  <section class="hero">
-    <div class="hero-body">
-      <div class="container is-max-desktop">
-        <div class="columns is-centered">
-          <div class="column has-text-centered">
-            <h1 class="xtitle is-1 publication-title">Academic Project Page</h1>
-            <div class="is-size-5 publication-authors">
-              <!-- Paper authors -->
-              <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup></span>
-                <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup></span>
+  <div id="fullpage">
+
+
+    <div class="section active" id="section0">
+
+        <video id="myVideo" loop muted data-autoplay playsinline>
+          <source src="static/videos/banner_video.mp4" type="video/mp4">
+          <source src="imgs/flowers.webm" type="video/webm">
+        </video>
+
+        <div class="hero-body">
+          <div class="container is-max-desktop">
+            <div class="columns is-centered">
+              <div class="column has-text-centered">
+                <h1 class="is-1 publication-title">StereoCrafter:  Converting Any 2D Videos to Immersive Stereoscopic 3D with Diffusion Priors </h1>
+                <div class="is-size-5 publication-authors">
+                  <!-- Paper authors -->
+                   <br/>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
-                  </span>
-                  </div>
+                    <a href="https://scholar.google.com/citations?user=tZ3dS3MAAAAJ&hl=en" target="_blank">Sijie Zhao</a><sup>*</sup></span>
+                    <span class="author-block">
+                      <a href="https://wbhu.github.io/" target="_blank">Wenbo Hu</a><sup>*</sup></span>
+                      <span class="author-block">
+                        <a href="https://vinthony.github.io/" target="_blank">Xiaodong Cun</a><sup>*</sup></span>
+                      <span class="author-block">
+                          <a href="https://yzhang2016.github.io/" target="_blank">Yong Zhang</a><sup>#</sup></span>
+                      <span class="author-block">
+                            <a href="https://xiaoyu258.github.io/" target="_blank">Xiaoyu Li</a><sup>#</sup></span>
+                      </br>
+                      <span class="author-block">
+                        <a href="https://scholar.google.com/citations?user=4X3yLwsAAAAJ&hl=zh-CN" target="_blank">Zhe Kong</a></span>
+                        <span class="author-block">
+                          <a href="https://scholar.google.com/citations?user=qgdesEcAAAAJ&hl=en" target="_blank">Xiangjun Gao</a></span>
+                          <span class="author-block">
+                            <a href="https://myniuuu.github.io/" target="_blank">Muyao Niu</a></span>
+                          <span class="author-block">
+                              <a href="https://scholar.google.com/citations?user=4oXBp9UAAAAJ&hl=en" target="_blank">Ying Shan</a></span>
+                          </div>
 
-                  <div class="is-size-5 publication-authors">
-                    <span class="author-block">Institution Name<br>Conferance name and year</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
-                  </div>
+                      <br/>
 
-                  <div class="column has-text-centered">
-                    <div class="publication-links">
-                         <!-- Arxiv PDF link -->
+
+
+                      <div class="publication-authors">
+                        <span class="author-block" style="font-size: 30px;">Tencent AI Lab</span>
+                        <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
+                      </div>
+                      <br/>
+
+                      <div class="column has-text-centered">
+                        <div class="publication-links">
+                             <!-- Arxiv PDF link -->
+                          <span class="link-block">
+                            <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+                            class="external-link ">
+                            <span class="icon">
+                              <i class="fas fa-file-pdf"></i>
+                            </span>
+                            <span>Paper</span>
+                          </a>
+                        </span>
+
+                        <!-- Supplementary PDF link -->
+                        <span class="link-block">
+                          <a href="static/pdfs/supplementary_material.pdf" target="_blank"
+                          class="external-link ">
+                          <span class="icon">
+                            <i class="fas fa-file-pdf"></i>
+                          </span>
+                          <span>Supplementary</span>
+                        </a>
+                      </span>
+
+                      <!-- Github link -->
                       <span class="link-block">
-                        <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+                        <a href="https://github.com/YOUR REPO HERE" target="_blank"
                         class="external-link ">
                         <span class="icon">
-                          <i class="fas fa-file-pdf"></i>
+                          <i class="fab fa-github"></i>
                         </span>
-                        <span>Paper</span>
+                        <span>Code</span>
                       </a>
                     </span>
 
-                    <!-- Supplementary PDF link -->
+                    <!-- ArXiv abstract Link -->
                     <span class="link-block">
-                      <a href="static/pdfs/supplementary_material.pdf" target="_blank"
+                      <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
                       class="external-link ">
                       <span class="icon">
-                        <i class="fas fa-file-pdf"></i>
+                        <i class="ai ai-arxiv"></i>
                       </span>
-                      <span>Supplementary</span>
+                      <span>arXiv</span>
                     </a>
                   </span>
-
-                  <!-- Github link -->
-                  <span class="link-block">
-                    <a href="https://github.com/YOUR REPO HERE" target="_blank"
-                    class="external-link ">
-                    <span class="icon">
-                      <i class="fab fa-github"></i>
-                    </span>
-                    <span>Code</span>
-                  </a>
-                </span>
-
-                <!-- ArXiv abstract Link -->
-                <span class="link-block">
-                  <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
-                  class="external-link ">
-                  <span class="icon">
-                    <i class="ai ai-arxiv"></i>
-                  </span>
-                  <span>arXiv</span>
-                </a>
-              </span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
+        </div>
       </div>
+
+    <div class="section" id="section1">
+      <h1>Main Pipeline</h1>
     </div>
+    <div class="section" id="section2"><h1>No wraps, no extra markup</h1></div>
+    <div class="section" id="section3"><h1>Just the simplest demo ever</h1></div>
   </div>
-</section>
+
+
+
 
 
 <section class="hero teaser">
@@ -198,7 +265,7 @@
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
+        Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus.
       </h2>
     </div>
   </div>
@@ -273,7 +340,7 @@
       <h2 class="title is-3">Video Presentation</h2>
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
-          
+
           <div class="publication-video">
             <!-- Youtube embed code here -->
             <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -320,7 +387,7 @@
 <!-- End video carousel -->
 
 
-<!-- Paper poster 
+<!-- Paper poster
 <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
@@ -328,7 +395,7 @@
 
       <iframe  src="static/pdfs/sample.pdf" width="100%" height="550">
           </iframe>
-        
+
       </div>
     </div>
   </section>
@@ -364,10 +431,17 @@ End paper poster -->
 </footer>
 
 <!-- Statcounter tracking code -->
-  
+
 <!-- You can add a tracker to track page visits by creating an account at statcounter.com -->
 
     <!-- End of Statcounter Code -->
+    <script type="text/javascript">
+      var myFullpage = new fullpage('#fullpage', {
+        verticalCentered: true,
+        sectionsColor: ['#333', '#333', '#333', '#333', '#333'],
+        navigation:true,
+      });
+    </script>
 
   </body>
   </html>
