--- a/index.html
+++ b/index.html
@@ -1,98 +1,206 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="KINETIQA: Kinematic Integration Network with Enhanced Temporal Intelligence and Quality-driven Attention for Precise Joint Angle Prediction in Exoskeleton-based Gait Analysis" />
-  <meta name="keywords" content="KINETIQA, knee joint angle prediction, exoskeleton, gait analysis, transformers, biomechanical forecasting" />
-  <meta property="og:title" content="KINETIQA: Precise Joint Angle Prediction in Exoskeleton-based Gait Analysis" />
-  <meta property="og:description" content="KINETIQA introduces a novel temporal Transformer model for highly accurate and robust knee angle forecasting in exoskeleton applications." />
-  <meta property="og:url" content="https://lyessaadsaoud.github.io/KINETIQA/" />
-  <meta property="og:image" content="static/images/preview.png" />
+  <meta charset="utf-8">
+  <meta name="description" content="KINETIQA: Kinematic Integration Network with Enhanced Temporal Intelligence and Quality-driven Attention for Precise Joint Angle Prediction in Exoskeleton-based Gait Analysis">
+  <meta property="og:title" content="KINETIQA: Precise Joint Angle Prediction in Exoskeleton-based Gait Analysis"/>
+  <meta property="og:description" content="KINETIQA introduces a novel temporal Transformer model for accurate and robust knee angle forecasting in exoskeleton applications."/>
+  <meta property="og:url" content="https://lyessaadsaoud.github.io/KINETIQA/"/>
+  <meta property="og:image" content="static/images/banner.png" />
+  <meta property="og:image:width" content="1200"/>
+  <meta property="og:image:height" content="630"/>
+  <meta name="twitter:title" content="KINETIQA: Joint Angle Forecasting for Exoskeletons">
+  <meta name="twitter:description" content="KINETIQA: A Transformer-based model for real-time knee joint angle prediction in exoskeleton-assisted rehabilitation.">
+  <meta name="twitter:image" content="static/images/banner.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="keywords" content="KINETIQA, knee joint prediction, gait analysis, exoskeletons, transformers, biomechanics, real-time AI">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>KINETIQA: Joint Angle Forecasting for Exoskeletons</title>
+  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
+  <link rel="stylesheet" href="static/css/bulma.min.css">
+  <link rel="stylesheet" href="static/css/bulma-carousel.min.css">
+  <link rel="stylesheet" href="static/css/bulma-slider.min.css">
+  <link rel="stylesheet" href="static/css/fontawesome.all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <link rel="stylesheet" href="static/css/index.css">
-  <link href="https://fonts.googleapis.com/css2?family=Google+Sans&display=swap" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
+  <script defer src="static/js/fontawesome.all.min.js"></script>
+  <script src="static/js/bulma-carousel.min.js"></script>
+  <script src="static/js/bulma-slider.min.js"></script>
+  <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+  <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+        tex2jax: {
+          inlineMath: [['$','$'], ['\\(','\\)']],
+          processEscapes: true
+        }
+      });
+  </script>
+  <script src="static/js/index.js"></script>
 </head>
-
 <body>
-  <header class="header">
-    <div class="container">
-      <h1>KINETIQA: Kinematic Integration Network with Enhanced Temporal Intelligence and Quality-driven Attention</h1>
-      <p class="subtitle">For Precise Joint Angle Prediction in Exoskeleton-based Gait Analysis</p>
-      <p class="authors">
-        <strong>Lyes Saad Saoud</strong>, Muhammad Irfan, Wadha Al Shehhi, Fatima Al Neyadi, Ahmed Al Harbi
-      </p>
-      <p class="venue">Khalifa University, 2025 (Submitted to IEEE Access)</p>
-      <div class="links">
-        <a href="https://github.com/lyessaadsaoud/KINETIQA" target="_blank">Code</a>
-        <a href="https://arxiv.org/abs/XXXX.XXXXX" target="_blank">arXiv</a>
-        <a href="static/pdfs/KINETIQA_paper.pdf" target="_blank">Paper PDF</a>
+
+  <section class="hero">
+    <div class="hero-body">
+      <div class="container is-max-desktop">
+        <div class="columns is-centered">
+          <div class="column has-text-centered">
+            <h1 class="xtitle is-1 publication-title">KINETIQA: Kinematic Integration Network with Enhanced Temporal Intelligence and Quality-driven Attention</h1>
+            <div class="is-size-5 publication-authors">
+              <span class="author-block">
+                <a href="https://www.linkedin.com/in/lyes-saad-saoud/" target="_blank">Lyes Saad Saoud</a><sup>*</sup></span>
+              <span class="author-block">
+                <a href="https://www.linkedin.com/in/muhammad-irfan-123456789/" target="_blank">Muhammad Irfan</a><sup>*</sup></span>
+              <span class="author-block">
+                <a href="https://www.linkedin.com/in/wadha-al-shehhi/" target="_blank">Wadha Al Shehhi</a>
+              </span>
+              <span class="author-block">
+                <a href="https://www.linkedin.com/in/fatima-al-neyadi/" target="_blank">Fatima Al Neyadi</a>
+              </span>
+              <span class="author-block">
+                <a href="https://www.linkedin.com/in/ahmed-al-harbi/" target="_blank">Ahmed Al Harbi</a>
+              </span>
+            </div>
+
+            <div class="is-size-5 publication-authors">
+              <span class="author-block">Khalifa University<br>IEEE Access, 2025</span>
+              <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+            </div>
+
+            <div class="column has-text-centered">
+              <div class="publication-links">
+                <span class="link-block">
+                  <a href="https://arxiv.org/pdf/XXXX.XXXXX.pdf" target="_blank" class="external-link ">
+                    <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                    </span>
+                    <span>Paper</span>
+                  </a>
+                </span>
+                <span class="link-block">
+                  <a href="static/pdfs/supplementary_material.pdf" target="_blank" class="external-link ">
+                    <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                    </span>
+                    <span>Supplementary</span>
+                  </a>
+                </span>
+                <span class="link-block">
+                  <a href="https://github.com/lyessaadsaoud/KINETIQA" target="_blank" class="external-link ">
+                    <span class="icon">
+                      <i class="fab fa-github"></i>
+                    </span>
+                    <span>Code</span>
+                  </a>
+                </span>
+                <span class="link-block">
+                  <a href="https://arxiv.org/abs/XXXX.XXXXX" target="_blank" class="external-link ">
+                    <span class="icon">
+                      <i class="ai ai-arxiv"></i>
+                    </span>
+                    <span>arXiv</span>
+                  </a>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </header>
-
-  <section class="abstract container">
-    <h2>Abstract</h2>
-    <p>
-      We present <strong>KINETIQA</strong>, a Transformer-based model for accurate and interpretable knee joint angle forecasting in exoskeleton-based gait analysis. The model integrates temporal convolutions and multi-head attention with quality-driven signal processing to capture biomechanical patterns under variable gait conditions. It achieves a 20% average reduction in Mean Absolute Percentage Error (MAPE) compared to baselines like LSTM, GRU, TempoNet, and FocalGatedNet. Extensive evaluations demonstrate KINETIQA’s robustness to sensor noise (Gaussian, uniform, and salt-and-pepper), long-range prediction, and signal delay, making it suitable for wearable rehabilitation systems.
-    </p>
   </section>
 
-  <section class="teaser container">
-    <video controls autoplay loop muted width="100%">
-      <source src="static/videos/demo.mp4" type="video/mp4" />
-      Your browser does not support the video tag.
-    </video>
-    <p class="caption">Prediction vs Ground Truth Joint Angle Comparison (80 ms Horizon)</p>
+  <!-- Teaser video-->
+  <section class="hero teaser">
+    <div class="container is-max-desktop">
+      <div class="hero-body">
+        <video poster="" id="tree" autoplay controls muted loop height="100%">
+          <source src="static/videos/banner_video.mp4" type="video/mp4">
+        </video>
+        <h2 class="subtitle has-text-centered">
+          Real-time knee joint angle prediction in exoskeleton-assisted gait analysis.
+        </h2>
+      </div>
+    </div>
   </section>
+  <!-- End teaser video -->
 
-  <section class="results container">
-    <h2>Highlights</h2>
-    <ul>
-      <li>📈 <strong>25% MAPE Reduction</strong> at 100 ms horizon over closest competitor</li>
-      <li>🔁 Robust across noise types and time delays (validated with p-values &lt; 0.01)</li>
-      <li>🧠 Quality-driven attention + temporal convolutions enhance both performance and interpretability</li>
-      <li>⏱️ Optimized for real-time deployment in rehabilitation robotics</li>
-    </ul>
-    <img src="static/images/performance_chart.png" alt="Performance Comparison Chart" width="100%" />
+  <!-- Paper abstract -->
+  <section class="section hero is-light">
+    <div class="container is-max-desktop">
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <h2 class="title is-3">Abstract</h2>
+          <div class="content has-text-justified">
+            <p>
+              We present <strong>KINETIQA</strong>, a Transformer-based model tailored for real-time knee joint angle prediction in exoskeleton-assisted rehabilitation. It integrates temporal convolutions, recursive feature elimination, and quality-driven attention to enhance long-horizon gait forecasting while maintaining computational efficiency. KINETIQA significantly outperforms baselines like Transformer, TempoNet, LSTM, and FocalGatedNet, achieving over 20% MAPE reduction and demonstrating resilience to various sensor noise types including Gaussian, uniform, and salt-and-pepper noise.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
+  <!-- End paper abstract -->
 
-  <section class="reproducibility container">
-    <h2>Reproducibility</h2>
-    <p>
-      To ensure full transparency, we provide all resources on the <a href="https://github.com/lyessaadsaoud/KINETIQA">GitHub page</a> and a dedicated <a href="https://lyessaadsaoud.github.io/KINETIQA/">project webpage</a>. These include:
-    </p>
-    <ul>
-      <li>✔️ Source code and pre-trained checkpoints</li>
-      <li>✔️ Animations and result visualizations</li>
-      <li>✔️ Step-by-step setup instructions (PyTorch 1.13.1, Python 3.10.9, Windows 11, CUDA 11.7)</li>
-      <li>✔️ Downloadable <code>requirements.txt</code> and <code>config.yaml</code></li>
-      <li>✔️ Folder structure and I/O sample formats</li>
-    </ul>
-    <p>
-      Environment setup was managed via <code>venv</code> and <code>pip</code> in PyCharm (Community 2023.1). No Docker was used, but full manual instructions are available.
-    </p>
+  <!-- Image carousel -->
+  <section class="hero is-small">
+    <div class="hero-body">
+      <div class="container">
+        <div id="results-carousel" class="carousel results-carousel">
+          <div class="item">
+            <img src="static/images/carousel1.jpg" alt="Performance Comparison Chart"/>
+            <h2 class="subtitle has-text-centered">
+              Performance Comparison Chart
+            </h2>
+          </div>
+          <div class="item">
+            <img src="static/images/carousel2.jpg" alt="Model Architecture Overview"/>
+            <h2 class="subtitle has-text-centered">
+              Model Architecture Overview
+            </h2>
+          </div>
+          <div class="item">
+            <img src="static/images/carousel3.jpg" alt="Prediction vs Ground Truth"/>
+            <h2 class="subtitle has-text-centered">
+              Prediction vs Ground Truth
+            </h2>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
+  <!-- End image carousel -->
 
-  <section class="bibtex container">
-    <h2>BibTeX</h2>
-    <pre>
-@article{saoud2025kinetiqa,
+  <!-- BibTeX citation -->
+  <section class="section" id="BibTeX">
+    <div class="container is-max-desktop content">
+      <h2 class="title">BibTeX</h2>
+      <pre><code>@article{saoud2025kinetiqa,
   title={KINETIQA: Kinematic Integration Network with Enhanced Temporal Intelligence and Quality-driven Attention for Precise Joint Angle Prediction in Exoskeleton-based Gait Analysis},
   author={Saad Saoud, Lyes and Irfan, Muhammad and Al Shehhi, Wadha and Al Neyadi, Fatima and Al Harbi, Ahmed},
   journal={IEEE Access},
-  year={2025},
-  note={Under Review}
-}
-    </pre>
+  year={2025}
+}</code></pre>
+    </div>
   </section>
+  <!-- End BibTeX citation -->
 
   <footer class="footer">
     <div class="container">
-      <p>
-        Built using the Academic Project Page template by <a href="https://github.com/vinthony">vinthony</a>. Licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0</a>.
-      </p>
-    </div>
-  </footer>
-</body>
-</html>
+      <div class="columns is-centered">
+        <div class="column is-8">
+          <div class="content">
+            <p>
+  This page was built using a modified version of the
+  <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">
+    Academic Project Page Template
+  </a>
+  by <a href="https://github.com/eliahuhorwitz" target="_blank">Eliahu Horwitz</a>,
+  extended by <a href="https://github.com/vinthony" target="_blank">Vinthony</a>.
+  You are free to borrow and adapt the structure of this page; we kindly ask that you include attribution in the footer. <br>
+  This website is licensed under a
+  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">
+    Creative Commons Attribution-ShareAlike 4.0 International License
+  </a>.
+</p>
