--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
       <video poster="" id="tree" autoplay controls muted loop height="100%">
-        <source src="static/videos/banner_video.mp4" type="video/mp4">
+        <source src="static/videos/KINETIQA.mp4" type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
         Real-time knee joint angle prediction for exoskeleton-based gait rehabilitation.
