--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <span class="author-block"><a href="https://www.linkedin.com/in/irfan-hussain/" target="_blank">Irfan Hussain</a><sup>*</sup></span>
           </div>
           <div class="is-size-5 publication-authors">
-            <span class="author-block">Khalifa University, ARIC Center<br>IEEE Access, 2025</span>
+            <span class="author-block">Khalifa University, ARIC Center<br>Submitted to IEEE Access, 2025</span>
            
           </div>
 
@@ -140,31 +140,38 @@
     <pre><code>@article{saoud2025kinetiqa,
   title={KINETIQA: Kinematic Integration Network with Enhanced Temporal Intelligence and Quality-driven Attention for Precise Joint Angle Prediction in Exoskeleton-based Gait Analysis},
   author={Saad Saoud, Lyes and Hussain, Irfan},
-  journal={IEEE Access},
+  journal={Submitted to IEEE Access},
   year={2025},
-  note={In Press}
+  note={Under review}
 }</code></pre>
   </div>
 </section>
 
-<!-- Footer -->
-<footer class="footer">
-  <div class="container">
-    <div class="columns is-centered">
-      <div class="column is-8">
-        <div class="content">
-          <p>
-            This page was built using a modified version of the 
-            <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">Academic Project Page Template</a>,
-            extended by <a href="https://github.com/vinthony" target="_blank">Vinthony</a>. Please feel free to reuse and adapt with attribution.
-            <br>This website is licensed under 
-            <a href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative Commons BY-SA 4.0</a>.
-          </p>
-        </div>
-      </div>
+<!-- Reproducibility Section -->
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <h2 class="title is-3">Reproducibility Statement</h2>
+    <div class="content has-text-justified">
+      <p>
+        To ensure transparency and support future research, we have created a dedicated project webpage at
+        <a href="https://lyessaadsaoud.github.io/KINETIQA/" target="_blank">https://lyessaadsaoud.github.io/KINETIQA/</a>. The page provides comprehensive access to all resources required to reproduce our experiments, including:
+      </p>
+      <ul>
+        <li>Source code and trained model checkpoints</li>
+        <li>Visualization animations and result plots</li>
+        <li>Detailed step-by-step instructions for training and evaluation</li>
+        <li>Hardware and software environment details</li>
+        <li>Downloadable <code>requirements.txt</code> and configuration files</li>
+        <li>Input/output data formats and expected folder structures</li>
+      </ul>
+      <p>
+        All experiments were implemented using PyTorch 1.13.1 in PyCharm (Community Edition 2023.1) on a Windows 11 system with an NVIDIA RTX 4090 Ti GPU, CUDA 11.7, and cuDNN 8.6. Python version 3.10.9 was used, and environment setup was managed using <code>venv</code> and <code>pip</code>. While Docker was not used, the complete environment and setup instructions are thoroughly documented on the project page to ensure replicability.
+      </p>
     </div>
   </div>
-</footer>
+</section>
+
+
 
 </body>
 </html>
