--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://github.com/lyessaadsaoud/KINETIQA" target="_blank" class="external-link">
+                <a href="https://github.com/LyesSaadSaoud/KINETIQA" target="_blank" class="external-link">
                   <span class="icon"><i class="fab fa-github"></i></span><span>Code</span>
                 </a>
               </span>
@@ -154,7 +154,7 @@
     <div class="content has-text-justified">
       <p>
         To ensure transparency and support future research, we have created a dedicated project webpage at
-        <a href="https://lyessaadsaoud.github.io/KINETIQA/" target="_blank">https://lyessaadsaoud.github.io/KINETIQA/</a>. The page provides comprehensive access to all resources required to reproduce our experiments, including:
+        <a href="https://lyessaadsaoud.github.io/KINETIQA/" target="_blank">https://github.com/LyesSaadSaoud/KINETIQA/</a>. The page provides comprehensive access to all resources required to reproduce our experiments, including:
       </p>
       <ul>
         <li>Source code and trained model checkpoints</li>
