--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content="KINETIQA: Kinematic Integration Network with Enhanced Temporal Intelligence and Quality-driven Attention for Precise Joint Angle Prediction in Exoskeleton-based Gait Analysis">
   <meta property="og:title" content="KINETIQA: Joint Angle Forecasting for Exoskeletons"/>
   <meta property="og:description" content="Transformer-based model for accurate and robust knee joint angle prediction in real-time exoskeleton control."/>
-  <meta property="og:url" content="https://lyessaadsaoud.github.io/KINETIQA/"/>
+  <meta property="og:url" content="https://github.com/LyesSaadSaoud/KINETIQA/"/>
   <meta property="og:image" content="static/images/banner.png" />
   <meta property="og:image:width" content="1200"/>
   <meta property="og:image:height" content="630"/>
