--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <div class="content has-text-justified">
       <p>
         To ensure transparency and support future research, we have created a dedicated project webpage at
-        <a href="https://lyessaadsaoud.github.io/KINETIQA/" target="_blank">https://github.com/LyesSaadSaoud/KINETIQA/</a>. The page provides comprehensive access to all resources required to reproduce our experiments, including:
+        <a href="https://github.com/LyesSaadSaoud/KINETIQA/" target="_blank">https://github.com/LyesSaadSaoud/KINETIQA/</a>. The page provides comprehensive access to all resources required to reproduce our experiments, including:
       </p>
       <ul>
         <li>Source code and trained model checkpoints</li>
