--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>KINETIQA: Precise Gait Forecasting</title>
 
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="static/images/lyes_icon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
   <link rel="stylesheet" href="static/css/bulma.min.css">
   <link rel="stylesheet" href="static/css/bulma-carousel.min.css">
@@ -35,52 +35,47 @@
 </head>
 <body>
 
+
+<!-- Hero Section with Styled Title and Author Format -->
 <section class="hero">
   <div class="hero-body">
-    <div class="container is-max-desktop">
-      <div class="columns is-centered">
-        <div class="column has-text-centered">
-          <h1 class="xtitle is-1 publication-title">KINETIQA: Kinematic Integration Network with Enhanced Temporal Intelligence and Quality-driven Attention</h1>
-          <div class="is-size-5 publication-authors">
-            <span class="author-block"><a href="https://www.linkedin.com/in/lyes-saad-saoud/" target="_blank">Lyes Saad Saoud</a><sup>*</sup></span>
-            <span class="author-block"><a href="https://www.linkedin.com/in/irfan-hussain/" target="_blank">Irfan Hussain</a><sup>*</sup></span>
-          </div>
-          <div class="is-size-5 publication-authors">
-            <span class="author-block">Khalifa University, ARIC Center<br>Submitted to IEEE Access, 2025</span>
-           
-          </div>
+    <div class="container is-max-desktop has-text-centered">
+      <h1 class="title is-1 has-text-weight-bold">KINETIQA</h1>
+      <h2 class="subtitle is-4">Kinematic Integration Network with Enhanced Temporal Intelligence and Quality-driven Attention</h2>
 
-          <div class="column has-text-centered">
-            <div class="publication-links">
-              <span class="link-block">
-                <a href="https://arxiv.org/pdf/XXXX.XXXXX.pdf" target="_blank" class="external-link">
-                  <span class="icon"><i class="fas fa-file-pdf"></i></span><span>Paper</span>
-                </a>
-              </span>
-              <span class="link-block">
-                <a href="static/pdfs/supplementary_material.pdf" target="_blank" class="external-link">
-                  <span class="icon"><i class="fas fa-file-pdf"></i></span><span>Supplementary</span>
-                </a>
-              </span>
-              <span class="link-block">
-                <a href="https://github.com/LyesSaadSaoud/KINETIQA" target="_blank" class="external-link">
-                  <span class="icon"><i class="fab fa-github"></i></span><span>Code</span>
-                </a>
-              </span>
-              <span class="link-block">
-                <a href="https://arxiv.org/abs/XXXX.XXXXX" target="_blank" class="external-link">
-                  <span class="icon"><i class="ai ai-arxiv"></i></span><span>arXiv</span>
-                </a>
-              </span>
-            </div>
-          </div>
+      <!-- Authors -->
+      <div class="is-size-5 publication-authors" style="margin-top: 1rem;">
+        <span class="author-block"><a href="https://www.linkedin.com/in/lyes-saad-saoud/" target="_blank">Lyes Saad Saoud</a><sup>†</sup>,</span>
+        <span class="author-block"><a href="https://www.linkedin.com/in/irfan-hussain/" target="_blank">Irfan Hussain</a><sup>†</sup></span>
+      </div>
 
-        </div>
+      <!-- Affiliation -->
+      <div class="is-size-6" style="margin-top: 0.5rem;">
+        <span class="icon"><i class="fas fa-play"></i></span> Khalifa University, ARIC Center  
+        <br><sup>†</sup>Project Lead  
+      </div>
+
+      <!-- Buttons -->
+      <div class="buttons is-centered mt-4">
+        <a class="button is-dark" href="https://arxiv.org/pdf/XXXX.XXXXX.pdf" target="_blank">
+          <span class="icon"><i class="fas fa-file-pdf"></i></span><span>arXiv</span>
+        </a>
+        <a class="button is-dark" href="https://github.com/LyesSaadSaoud/KINETIQA" target="_blank">
+          <span class="icon"><i class="fab fa-github"></i></span><span>Code</span>
+        </a>
+        <a class="button is-dark" href="https://github.com/LyesSaadSaoud/KINETIQA/releases" target="_blank">
+          <span class="icon">🤗</span><span>Checkpoints</span>
+        </a>
+        <a class="button is-dark" href="static/pdfs/supplementary_material.pdf" target="_blank">
+          <span class="icon"><i class="fas fa-file-pdf"></i></span><span>Supplementary</span>
+        </a>
+        <a class="button is-dark" href="https://www.youtube.com/watch?v=XXXX" target="_blank">
+          <span class="icon"><i class="fab fa-youtube"></i></span><span>Video</span>
+        </a>
       </div>
     </div>
   </div>
 </section>
-
 <!-- Teaser video -->
 <section class="hero teaser">
   <div class="container is-max-desktop">
