--- a/index.html
+++ b/index.html
@@ -44,13 +44,17 @@
       <h2 class="subtitle is-4">Kinematic Integration Network with Enhanced Temporal Intelligence and Quality-driven Attention</h2>
 
       <!-- Authors -->
-      <div class="is-size-5 publication-authors" style="margin-top: 1rem;">
-        <span class="author-block"><a href="https://www.linkedin.com/in/lyes-saad-saoud/" target="_blank">Lyes Saad Saoud</a><sup>†</sup>,</span>
-        <span class="author-block"><a href="https://www.linkedin.com/in/irfan-hussain/" target="_blank">Irfan Hussain</a><sup>†</sup></span>
+      <div class="is-size-5 publication-authors mt-3">
+        <span class="author-block">
+          <a href="https://saadsaoudlyes3.wixsite.com/robotvision" class="has-text-link" target="_blank">Lyes Saad Saoud</a><sup>†</sup>,
+        </span>
+        <span class="author-block">
+          <a href="https://www.linkedin.com/in/irfan-hussain/" class="has-text-link" target="_blank">Irfan Hussain</a><sup>†</sup>
+        </span>
       </div>
 
       <!-- Affiliation -->
-      <div class="is-size-6" style="margin-top: 0.5rem;">
+      <div class="is-size-6 mt-1">
         <span class="icon"><i class="fas fa-play"></i></span> Khalifa University, ARIC Center  
         <br><sup>†</sup>Project Lead  
       </div>
@@ -76,6 +80,7 @@
     </div>
   </div>
 </section>
+
 <!-- Teaser video -->
 <section class="hero teaser">
   <div class="container is-max-desktop">
