--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
   <script src="static/js/bulma-carousel.min.js"></script>
   <script src="static/js/bulma-slider.min.js"></script>
   <script src="static/js/index.js"></script>
+  <style>
+.author-block a {
+  color: #3273dc; /* Bulma's default blue */
+  background-color: transparent !important;
+  text-decoration: none;
+  transition: none !important;
+  box-shadow: none !important;
+}
+
+.author-block a:hover {
+  color: #276cda; /* Slightly darker blue on hover */
+  background-color: transparent !important;
+  box-shadow: none !important;
+}
+</style>
+
 </head>
 <body>
 
