--- a/index.html
+++ b/index.html
@@ -33,20 +33,35 @@
   <script src="static/js/bulma-slider.min.js"></script>
   <script src="static/js/index.js"></script>
   <style>
-.author-block a {
-  color: #3273dc; /* Bulma's default blue */
+/* Removes yellow autofill background in Chrome/Safari */
+input:-webkit-autofill,
+textarea:-webkit-autofill,
+select:-webkit-autofill,
+.author-block a:-webkit-any-link {
   background-color: transparent !important;
-  text-decoration: none;
-  transition: none !important;
   box-shadow: none !important;
+  transition: none !important;
 }
 
-.author-block a:hover {
-  color: #276cda; /* Slightly darker blue on hover */
+/* Override any persistent outline or highlight */
+.author-block a {
+  color: #3273dc !important;         /* Bulma blue */
   background-color: transparent !important;
+  text-decoration: none;
+  box-shadow: none !important;
+  transition: none !important;
+  padding: 0 !important;
+}
+
+/* On hover: keep it simple and clean */
+.author-block a:hover {
+  color: #276cda !important;
+  background-color: transparent !important;
+  text-decoration: underline; /* Optional */
   box-shadow: none !important;
 }
 </style>
+
 
 </head>
 <body>
