--- a/index.html
+++ b/index.html
@@ -32,44 +32,20 @@
   <script src="static/js/bulma-carousel.min.js"></script>
   <script src="static/js/bulma-slider.min.js"></script>
   <script src="static/js/index.js"></script>
- <style>
-/* Removes yellow autofill background in Chrome/Safari */
-input:-webkit-autofill,
-textarea:-webkit-autofill,
-select:-webkit-autofill,
-.author-block a:-webkit-any-link {
-  background-color: transparent !important;
-  box-shadow: none !important;
-  transition: none !important;
-}
+  <style>
+/* Your existing styles... */
 
-/* Override any persistent outline or highlight */
-.author-block a {
-  color: #3273dc !important;         
-  background-color: transparent !important;
-  text-decoration: none;
+/* Fix yellow hover flicker on buttons */
+.button.is-dark:hover,
+.button.is-dark:focus,
+.button.is-dark:active {
+  background-color: #363636 !important;
   box-shadow: none !important;
-  transition: none !important;
-  padding: 0 !important;
-}
-
-/* On hover: keep it simple and clean */
-.author-block a:hover {
-  color: #276cda !important;
-  background-color: transparent !important;
-  text-decoration: underline;
-  box-shadow: none !important;
-}
-
-/* This final rule removes hover background flickers completely */
-.author-block a:focus,
-.author-block a:hover,
-.author-block a:active {
-  background-color: transparent !important;
   outline: none !important;
-  box-shadow: none !important;
+  transition: none !important;
 }
 </style>
+
 
 
 
@@ -90,7 +66,7 @@ select:-webkit-autofill,
           <a href="https://saadsaoudlyes3.wixsite.com/robotvision" class="has-text-link" target="_blank">Lyes Saad Saoud</a><sup>†</sup>,
         </span>
         <span class="author-block">
-          <a href="https://www.linkedin.com/in/irfan-hussain/" class="has-text-link" target="_blank">Irfan Hussain</a><sup>†</sup>
+          <a href="https://www.linkedin.com/in/irf-hussain/" class="has-text-link" target="_blank">Irfan Hussain</a><sup>†</sup>
         </span>
       </div>
 
