--- a/index.html
+++ b/index.html
@@ -33,7 +33,42 @@
   <script src="static/js/bulma-slider.min.js"></script>
   <script src="static/js/index.js"></script>
   <style>
-/* Your existing styles... */
+/* Removes yellow autofill background in Chrome/Safari */
+input:-webkit-autofill,
+textarea:-webkit-autofill,
+select:-webkit-autofill,
+.author-block a:-webkit-any-link {
+  background-color: transparent !important;
+  box-shadow: none !important;
+  transition: none !important;
+}
+
+/* Override any persistent outline or highlight */
+.author-block a {
+  color: #3273dc !important;         
+  background-color: transparent !important;
+  text-decoration: none;
+  box-shadow: none !important;
+  transition: none !important;
+  padding: 0 !important;
+}
+
+/* On hover: keep it simple and clean */
+.author-block a:hover {
+  color: #276cda !important;
+  background-color: transparent !important;
+  text-decoration: underline;
+  box-shadow: none !important;
+}
+
+/* This final rule removes hover background flickers completely */
+.author-block a:focus,
+.author-block a:hover,
+.author-block a:active {
+  background-color: transparent !important;
+  outline: none !important;
+  box-shadow: none !important;
+}
 
 /* Fix yellow hover flicker on buttons */
 .button.is-dark:hover,
