--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item">
-          <img src="static/images/KINETIQA.png" alt="KINETIQA Architecture"/>
+         <img class="carousel-img" src="static/images/KINETIQA.png" alt="KINETIQA Architecture"/>
+
           <h2 class="subtitle has-text-centered">KINETIQA Model Architecture Overview</h2>
         </div>
         <div class="item">
