--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
           <h2 class="subtitle has-text-centered">KINETIQA Model Architecture Overview</h2>
         </div>
         <div class="item">
-          <img src="static/images/FeatureSelectionPlot.png" alt="Feature Selection Performance"/>
+          <img class="carousel-img" src="static/images/FeatureSelectionPlot.png" alt="Feature Selection Performance"/>
           <h2 class="subtitle has-text-centered">Feature Selection via Random Forest + RFECV</h2>
         </div>
         <div class="item">
-          <img src="static/images/ImprovementKINETIQA.png" alt="MAE Improvements"/>
+          <img class="carousel-img"  src="static/images/ImprovementKINETIQA.png" alt="MAE Improvements"/>
           <h2 class="subtitle has-text-centered">Relative Improvement in MAE Over Baselines</h2>
         </div>
       </div>
